fix: ./gradlew clean test 위한 자바 버전 8로 수정 및 코드 수정